--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.0",
     "@commitlint/config-conventional": "^18.4.0",
+    "@types/node": "^20.9.0",
     "husky": "^8.0.3",
     "nodemon": "^3.0.1",
     "ts-node-dev": "^2.0.0",
